Fix remaining packaging blockers for PR merge
- Reorganize src/ into proper vggt_mps package structure
- Move all modules into src/vggt_mps/ with proper __init__.py files
- Update pyproject.toml to use standard package-dir pattern
- Fix setup.py to use package_dir={'': 'src'} correctly
- Move main.py to src/vggt_mps/__main__.py for entry points
- Update all imports in tests to use new package structure
- Fix console scripts to use vggt_mps.__main__:main

All HIGH priority blockers resolved:
✅ Package now installs correctly with pip install -e .
✅ Console scripts (vggt, vggt-mps) work properly
✅ All tests pass (7 passed)
✅ No import errors or missing modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,11 +79,12 @@ Issues = "https://github.com/jmanhype/vggt-mps/issues"
 "Release Notes" = "https://github.com/jmanhype/vggt-mps/releases"
 
 [project.scripts]
-vggt = "main:main"
-vggt-mps = "main:main"
+vggt = "vggt_mps.__main__:main"
+vggt-mps = "vggt_mps.__main__:main"
 
 [tool.setuptools]
-packages = ["src", "tests"]
+packages.find = {where = ["src"]}
+package-dir = {"" = "src"}
 include-package-data = true
 
 [tool.setuptools.package-data]
