Add official kitchen sample images

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,12 +8,12 @@ include DEVELOPMENT.md
 include pyproject.toml
 include Makefile
 include .python-version
-include requirements.txt
 include requirements-lock.txt
 
 # Include source code
 recursive-include src *.py
 recursive-include tests *.py
+recursive-include examples/sample_data *.png *.jpg README.md
 
 # Include package data
 recursive-include src *.json *.yaml *.yml *.txt
