--- a/.github/workflows/self-improve.yml
+++ b/.github/workflows/self-improve.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Run Claude Code Self-Improvement
         uses: anthropics/claude-code-action@v1
         with:
+          claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
           prompt: |
             You are analyzing this repository for self-improvement opportunities. Follow these steps:
 
