feat: enable file write tools for Claude Code workflow
- Added --allowedTools flag to enable Read, Write, Edit, Glob, Grep, and Bash tools
- Previous runs hit permission denials when trying to create SECURITY.md and CODEOWNERS
- Claude needs explicit Write/Edit permission to create documentation files
- Also enabled git and gh Bash commands for commit and PR operations

--- a/.github/workflows/self-improve.yml
+++ b/.github/workflows/self-improve.yml
@@ -53,4 +53,6 @@ jobs:
                - Summarize what was fixed and why
 
             Remember to check CLAUDE.md for additional constraints.
-          claude_args: "--max-turns 30"
+          claude_args: |
+            --max-turns 30
+            --allowedTools "Read,Write,Edit,Glob,Grep,Bash(git:*),Bash(gh:*)"
