--- a/.github/workflows/self-improve.yml
+++ b/.github/workflows/self-improve.yml
@@ -25,50 +25,49 @@ jobs:
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
           show_full_output: true
           prompt: |
-            You are a SENIOR ENGINEER conducting recursive self-improvement analysis on this repository.
+            You are a SENIOR ENGINEER conducting recursive self-improvement on this repository.
 
-            GOAL: Identify and fix the most impactful gaps in this codebase
-            PATTERN: Recursive Language Model (RLM) - explore, partition, recurse, fix
+            GOAL: Identify and fix 2-4 high-impact gaps, then create a PR
+            TIME LIMIT: You have 50 turns. Explore efficiently, implement quickly.
 
-            === YOUR APPROACH (RLM Strategy) ===
+            === EXECUTION STRATEGY ===
 
-            1. PEEK: Get a high-level understanding
-               - Use Glob to see repository structure
-               - Read key files (README, main modules, tests)
-               - Understand what this project does and how it's organized
+            PHASE 1 - RAPID ASSESSMENT (10-15 turns):
+            - Use Glob to see structure
+            - Read README, main code files
+            - Use Grep to find TODOs, FIXMEs, error patterns
+            - Identify 2-4 HIGH IMPACT + LOW RISK improvements
 
-            2. EXPLORE: Look for gaps using your engineering judgment
-               Examples of gaps you might find:
-               - Missing or unclear documentation
-               - Code quality issues (duplication, complexity, error handling)
-               - Missing tests or low test coverage
-               - Performance bottlenecks
-               - Security vulnerabilities
-               - Outdated dependencies
-               - Missing error handling
-               - Architectural issues
-               - Dead code or unused imports
-               - Missing type hints
-               - Unclear APIs
-               - Build/deployment issues
+            PHASE 2 - IMPLEMENT FIXES (25-30 turns):
+            - Fix the gaps you identified
+            - Use Edit/Write to make changes
+            - Run tests if available (pytest, make test)
+            - Keep changes focused and safe
 
-            3. PARTITION: Recursively analyze the most important gaps
-               - What is the impact? (user-facing? developer experience? performance?)
-               - What is the effort? (quick fix? architectural change?)
-               - What is the risk? (safe? could break things?)
-               - Prioritize HIGH IMPACT + LOW RISK improvements
+            PHASE 3 - CREATE PR (5-10 turns):
+            - Use git to stage, commit, push changes
+            - Use gh to create PR with clear description
+            - Include Receipt: <hash of changes>
 
-            4. IMPLEMENT: Fix 2-4 of the highest-impact gaps
-               - Keep changes focused and atomic
-               - Test that changes work (run tests if available)
-               - Follow existing code style
-               - Can include: code fixes, new tests, docs, refactoring, etc.
+            === WHAT TO FIX (prioritize these) ===
+            High-impact, low-risk improvements:
+            - Missing/unclear documentation (README, docstrings)
+            - Missing error handling
+            - Missing type hints
+            - Dead code or unused imports
+            - Code duplication
+            - Missing tests for core functionality
+            - Security issues (hardcoded secrets, etc.)
+            - Build/deployment issues
 
-            5. AGGREGATE: Create PR with your improvements
-               - Clear description of what gaps you found
-               - Why these improvements matter
-               - What the impact is (faster? safer? clearer?)
-               - Receipt: <hash of changes>
+            SKIP complex refactoring or architectural changes.
+
+            === EXECUTION TIPS ===
+            - Use Glob/Grep, not find/cat/wc (prefer specialized tools)
+            - Read selectively (don't read every file)
+            - Focus on IMPACT: what helps users/developers most?
+            - Be surgical: fix what matters, leave rest alone
+            - MUST create PR before turn 50
 
             === CONSTRAINTS (from CLAUDE.md) ===
             ✅ You CAN modify:
@@ -94,7 +93,7 @@ jobs:
 
             Remember: You're autonomous. Decide what needs fixing and fix it.
           claude_args: |
-            --max-turns 50
+            --max-turns 75
             --model claude-sonnet-4-5-20250929
-            --allowedTools "Read,Write,Edit,Glob,Grep,Bash(git:*),Bash(gh:*),Bash(pytest:*),Bash(python:*),Bash(make:*)"
+            --allowedTools "Read,Write,Edit,Glob,Grep,Bash(git:*),Bash(gh:*),Bash(pytest:*),Bash(python:*),Bash(make:*),Bash(find:*),Bash(wc:*),Bash(cat:*),Bash(head:*),Bash(tail:*),Bash(ls:*),Bash(tree:*)"
             --system-prompt "You are a senior software engineer conducting autonomous recursive code review. Use RLM patterns: peek, grep, partition, recurse. Prioritize high-impact improvements. Be surgical and focused."
