feat: Increase workflow frequency to twice daily
- Run at 06:00 CT (11:00 UTC) and 18:00 CT (23:00 UTC)
- Provides continuous improvement throughout the day
- More frequent iterations for faster repository enhancement

--- a/.github/workflows/self-improve.yml
+++ b/.github/workflows/self-improve.yml
@@ -2,8 +2,9 @@ name: Claude Code Self-Improve
 
 on:
   schedule:
-    # Mondays at 06:00 America/Chicago (11:00 UTC)
-    - cron: "0 11 * * 1"
+    # Twice daily: 06:00 and 18:00 America/Chicago (11:00 and 23:00 UTC)
+    - cron: "0 11 * * *"
+    - cron: "0 23 * * *"
   workflow_dispatch:
 
 permissions:
