--- a/.github/workflows/self-improve.yml
+++ b/.github/workflows/self-improve.yml
@@ -102,11 +102,11 @@ jobs:
       - name: Trigger Qodo Review
         if: steps.anthropics-claude-code-action.outputs.pr_number != ''
         env:
-          GH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          PR_NUMBER=\$(gh pr list --head \$(git branch --show-current) --json number --jq '.[0].number')
-          if [ -n "\$PR_NUMBER" ]; then
-            echo "Commenting on PR #\$PR_NUMBER to trigger Qodo review"
-            gh pr comment \$PR_NUMBER --body "/describe"
-            gh pr comment \$PR_NUMBER --body "/review"
+          PR_NUMBER=$(gh pr list --head $(git branch --show-current) --json number --jq '.[0].number')
+          if [ -n "$PR_NUMBER" ]; then
+            echo "Commenting on PR #$PR_NUMBER to trigger Qodo review"
+            gh pr comment $PR_NUMBER --body "/describe"
+            gh pr comment $PR_NUMBER --body "/review"
           fi
