fix: replace heredoc with echo statements to fix YAML parsing
The heredoc syntax inside the run: | block was causing GitHub Actions
YAML parser to fail with 'could not find expected :' error.

Replaced with multiple echo statements which is more compatible with
GitHub Actions YAML parser while maintaining the same functionality.

This fixes the instant failure seen in run 19083244536.

--- a/.github/workflows/recursive-self-improve.yml
+++ b/.github/workflows/recursive-self-improve.yml
@@ -210,15 +210,13 @@ jobs:
             cat .rlm-trace/depth-${{ matrix.depth }}-*.md
           else
             echo "⚠️ No execution trace found - creating fallback"
-            cat > .rlm-trace/depth-${{ matrix.depth }}-fallback.md << 'EOF'
-# RLM Execution Trace - Depth ${{ matrix.depth }} (Fallback)
-
-## Status
-No trace was created by the RLM execution.
-
-## Timestamp
-$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-EOF
+            echo "# RLM Execution Trace - Depth ${{ matrix.depth }} (Fallback)" > .rlm-trace/depth-${{ matrix.depth }}-fallback.md
+            echo "" >> .rlm-trace/depth-${{ matrix.depth }}-fallback.md
+            echo "## Status" >> .rlm-trace/depth-${{ matrix.depth }}-fallback.md
+            echo "No trace was created by the RLM execution." >> .rlm-trace/depth-${{ matrix.depth }}-fallback.md
+            echo "" >> .rlm-trace/depth-${{ matrix.depth }}-fallback.md
+            echo "## Timestamp" >> .rlm-trace/depth-${{ matrix.depth }}-fallback.md
+            echo "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> .rlm-trace/depth-${{ matrix.depth }}-fallback.md
           fi
 
       - name: Upload execution traces
