feat: add push trigger for testing recursive workflow
- Add push trigger on main and 001-* branches
- Limit to relevant file paths to avoid unnecessary runs
- Keep schedule and workflow_dispatch for production use
- Will revert to schedule-only after testing complete

This allows immediate testing and iteration on the RLM system.

--- a/.github/workflows/recursive-self-improve.yml
+++ b/.github/workflows/recursive-self-improve.yml
@@ -1,6 +1,16 @@
 name: Recursive Self-Improve (RLM)
 
 on:
+  push:
+    branches:
+      - main
+      - '001-*'  # Allow testing on feature branches
+    paths:
+      - '.github/workflows/recursive-self-improve.yml'
+      - '**/*.py'
+      - '**/*.md'
+      - 'src/**'
+      - 'tests/**'
   schedule:
     # Twice daily: 06:00 and 18:00 America/Chicago (11:00 and 23:00 UTC)
     - cron: "0 11 * * *"
