--- a/.github/workflows/trigger-recursive-test.yml
+++ b/.github/workflows/trigger-recursive-test.yml
@@ -20,6 +20,10 @@ permissions:
 jobs:
   trigger-recursive:
     runs-on: ubuntu-latest
+    # Skip if commit is from GitHub Actions (to avoid infinite loops)
+    if: |
+      !contains(github.event.head_commit.message, '[skip ci]') &&
+      !contains(github.event.head_commit.message, 'chore: add depth-')
     steps:
       - name: Trigger recursive workflow
         env:
